Changed site decription

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Allister Antosik
 email: me@allisterantosik.com
 author: Allister Antosik
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+description: "Thoughts and ideas from Allister Antosik, a Software Developer from Scotland."
 baseurl: ""
 url: "http://allisterantosik.com"
 
